<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/ed_std_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Student_name"
        android:gravity="center"
        style="@style/editTextStyle"
        />

    <EditText
        android:id="@+id/ed_std_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Student_phone"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="11"
        style="@style/editTextStyle"
        />

    <EditText
        android:id="@+id/ed_std_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Student_email"
        android:gravity="center"
        style="@style/editTextStyle"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/std_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#36add7"
            android:textColor="@android:color/white"
            style="@style/ButtontStyle"

            android:text="@string/add_button" />
        <Button
            android:id="@+id/std_add_img_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_image"
            android:textColor="@android:color/white"
            android:background="#40b972"
            style="@style/ButtontStyle"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:id="@+id/imgview_std"
        android:layout_marginTop="20dp"
        />
</LinearLayout>